# blocky

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
database/: block.db  genesis.json  state.json  tx.db
src/: block.rs  cmd.rs  database.rs  fs.rs  genesis.rs  lib.rs  main.rs  miner.rs  node.rs  state.rs  tx.rs  wallet.rs
src/cmd/: balance.rs  command.rs  migrate.rs  node.rs  tx.rs  version.rs  wallet.rs
src/handler/: api.rs
var/tbb1/: keystore
var/tbb2/: keystore
var/tbb3/: keystore
