[package]
name = "blocky"
version = "0.1.0"
edition = "2024"
default-run = "node"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/node.rs"
name = "node"

[[bin]]
path = "src/bin/cli.rs"
name = "cli"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"]}
tracing = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = {version = "0.4", features = ["serde"] }

