[package]
name = "blocky"
version = "0.1.0"
edition = "2024"
default-run = "cli"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/cli.rs"
name = "cli"


[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum-macros = "0.4"
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors","catch-panic"] }
clap = { version = "4.5", features = ["derive"]}
tracing = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = {version = "0.4", features = ["serde"] }

